refactor DeviceOrderLogic